--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-        Hello!
-            Djnago workshop is here.
-    </p>
+    <H5>Django</H5>
+    <p>Hello!</p>
 </body>
 </html>
